<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manymove_cpp_trees</name>
  <version>0.1.0</version>
  <description>Package to generate behaviortrees for manymove_planner using BehaviorTree.CPP</description>
  <maintainer email="marco.pastorio@flexingroup.com">Marco Pastorio</maintainer>
  <license>BSD-3-Clause</license>
  <author email="pastoriomarco@gmail.com">Marco Pastorio</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>rclcpp_action</depend>
  <depend>manymove_planner</depend>
  <depend>manymove_object_manager</depend>
  <depend>manymove_signals</depend>
  <depend>tf2</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
